detail page ui slicing

--- a/grails-app/assets/stylesheets/search.css
+++ b/grails-app/assets/stylesheets/search.css
@@ -1,8 +1,10 @@
 body {
     background: #FFFFFF;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
+
 
 .filters h5 {
     font-weight: bold;
