--- a/grails-app/assets/stylesheets/styles.css
+++ b/grails-app/assets/stylesheets/styles.css
@@ -4,8 +4,11 @@
     --dark-blue: #0B1220;
 }
 
-body {
+html, body {
     font-family: 'Volkhov', serif;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar {
@@ -347,10 +350,11 @@ body {
 
 /* Footer Styling */
 .site-footer {
-    background-color: var(--dark-blue); /* Warna gelap sesuai gambar */
+    margin-top: auto;
+    background-color: var(--dark-blue);
     padding: 20px 0;
-    color: white; /* Warna teks yang lebih lembut */
-    position: absolute;
+    color: white;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
